--- a/formBootstrap/index.html
+++ b/formBootstrap/index.html
@@ -1,116 +1,113 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Personal Informaition</title>
-	<meta name="viewport" content="width-device-width, instal-scale=1, shrink-to-fit=no"> 
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>Personal Informaition</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body class="bg-light">
-<div class="container">
-	<div class="col-lg-12 text-center py-4">
-		<span class="far fa-lightbulb fa-3x md-5 text-danger"></span>
-		<h1 class="text-danger">Personal Information</h1>
-	</div>
-	<form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="post" class="form-group">
-		<div class="container-fluid">
-			<div class="row ">
-				<fieldset class="col-lg-8">
-					<legend class="mb-4 text-primary">Personal Information</legend>
-						<div class="row">
-							<div class="col-md-6 mb-3">
-									<label for="surname">Surmane: </label>
-									<input type="text" name="surname" autocomplete="off" maxlength="15" id="surname" class="form-control">
-							</div>
-							<div class="col-md-6 mb-3">
-								<label for="name">Name: </label>
-								<input type="text" name="name" id="name" value="Yulia" minlength="2" class="form-control">
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-6 mb-3" >
-								<label for="age">How old are You? </label>
-								<input type="number" name="age" id="age" min="10" max="50" class="form-control">
-							</div>
-							<div class="col-md-6 mb-3">
-								<label for="birth">Full date of birth: </label>
-								<input type="date" name="birth" id="birth" class="form-control">
-							</div>
-						</div>
-						<div class="custom-control custom-checkbox mb-3">
-							<input type="checkbox" name="agree" id="agree" class="custom-control-input">
-							<label for="agree" class="custom-control-label">I accept the terms of the agreement </label>
-						</div>	
-				</fieldset>
-				<fieldset class="col-lg-4">
-					<legend class="mb-4 text-primary">Registaration</legend>
-					<div class="mb-3">
-						<label for="mail">E-mail </label>
-						<input type="email" name="mail" id="mail" placeholder="Ented your email" required class="form-control">
-					</div>
-					<div class="mb-3">
-						<label for="pass">Password </label>
-						<input type="password" name="pass" id="pass" class="form-control">
-					</div>
-				</fieldset>
-			</div>
-		</div>
-	<fieldset >
-		<legend class="mb-4 text-center text-primary">An interesting fact about you!</legend>
-		<div class="form-group row">
-			<p class="col-lg-3 col-sm-6">Do you love cats?</p>
-			<div class="col-lg-3 col-sm-6">
-            	<div class="custom-control custom-radio">
-    				<input type="radio" class="custom-control-input" id="customControlValidation2" name="radio-stacked" required>
-   					<label class="custom-control-label" for="customControlValidation2">Yes</label>
-   				</div>
-   				<div class="custom-control custom-radio">
-    				<input type="radio" class="custom-control-input" id="customControlValidation3" name="radio-stacked" required>
-    				<label class="custom-control-label" for="customControlValidation3">No</label>
-				  </div>
-			</div>
-		</div>
-		<div class="form-group row">
-			<label for="color" class="col-lg-3 col-sm-6">What is your favorite color? </label>
-			<div class="col-lg-3 col-sm-6">
-				<input type="color" name="colr" id="colr" class= "form-control">
-			</div>
-		</div>
-		<div class="form-group row">
-			<label for="timebed" class="col-lg-3 col-sm-6">What time do you go to bed? </label>
-			<div class="col-lg-3 col-sm-6">
-				<input type="time" name="timebed" id="timebed" class="form-control">
-			</div>
-		</div>
-		<div class="form-group row">
-			<label class="col-lg-3 col-sm-6">What your favorite brand of car?</label>
-			<div class="col-lg-3 col-sm-6">
-				<select class="form-control costom-select" required size="3">
-     				<option value="BMV">BMV</option>
-      				<option value="Audi">Audi</option>
-      				<option value="Lada" selected>Lada</option>
-				</select>
-			</div>
- 		 </div>
-		<div class="form-group row">
-			<label for="work" class="col-lg-3 col-sm-6">How do you rete out work? </label>
-			<div class="col-lg-3 col-sm-6">
-				<input type="range" name="work" id="work" class="form-control-range custom-range pt-2">
-			</div>
-		</div>
-	</fieldset>
-	<fieldset class="md-form">
-		<div class="col-lg-6 col-sm-6 offset-lg-2 offset-sm-3">
-			<legend class="md-3 text-primary">Your comments:</legend>
-			<textarea name="comm" placeholder="Comments" id="comm" class="md-textarea form-control" rows="3"></textarea>
-		</div>
-	</fieldset>
-	<div class="flex-column form-inline align-items-end pb-5">
-			<input class="btn btn-primary btn-block col-lg-2 col-sm-2 mb-2 p-2" type="submit" value="Submit" name="submit">
-			<button class="btn btn-danger btn-block col-lg-2 col-sm-2 p-2" type="reset" >Reset</button>
-	</div>
-	</div>
-</form>
-</div>
+  <div class="container">
+    <div class="col-lg-12 text-center pt-4">
+      <span class="far fa-lightbulb fa-3x text-danger"></span>
+      <h1 class="text-danger">Personal Information</h1>
+    </div>
+    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="post" class="form-group">
+      <div class="row ">
+        <fieldset class="col-lg-8">
+          <legend class="mb-4 text-primary">Personal Information</legend>
+          <div class="row">
+            <div class="col-lg-6 mb-3">
+              <label for="surname">Surmane: </label>
+              <input type="text" name="surname" autocomplete="off" maxlength="15" id="surname" class="form-control">
+            </div>
+            <div class="col-lg-6 mb-3">
+              <label for="name">Name: </label>
+              <input type="text" name="name" id="name" value="Yulia" minlength="2" class="form-control">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-6 mb-3" >
+              <label for="age">How old are You? </label>
+              <input type="number" name="age" id="age" min="10" max="50" class="form-control">
+            </div>
+            <div class="col-lg-6 mb-3">
+              <label for="birth">Full date of birth: </label>
+              <input type="date" name="birth" id="birth" class="form-control">
+            </div>
+          </div>
+          <div class="custom-control custom-checkbox mb-3">
+            <input type="checkbox" name="agree" id="agree" class="custom-control-input">
+            <label for="agree" class="custom-control-label">I accept the terms of the agreement </label>
+          </div>	
+        </fieldset>
+        <fieldset class="col-lg-4">
+          <legend class="mb-4 text-primary">Registaration</legend>
+          <div class="mb-3">
+            <label for="mail">E-mail </label>
+            <input type="email" name="mail" id="mail" placeholder="Ented your email" required class="form-control">
+          </div>
+          <div class="mb-3">
+            <label for="pass">Password </label>
+            <input type="password" name="pass" id="pass" class="form-control">
+          </div>
+        </fieldset>
+        <fieldset>
+          <legend class="mb-4 text-center text-primary">An interesting fact about you!</legend>
+          <div class="form-group row">
+            <p class="col-lg-3 col-sm-6">Do you love cats?</p>
+            <div class="col-lg-3 col-sm-6">
+              <div class="custom-control custom-radio">
+                <input type="radio" class="custom-control-input" id="customControlValidation2" name="radio-stacked" required>
+                <label class="custom-control-label" for="customControlValidation2">Yes</label>
+              </div>
+              <div class="custom-control custom-radio">
+                <input type="radio" class="custom-control-input" id="customControlValidation3" name="radio-stacked" required>
+                <label class="custom-control-label" for="customControlValidation3">No</label>
+              </div>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="color" class="col-lg-3 col-sm-6">What is your favorite color? </label>
+            <div class="col-lg-3 col-sm-6">
+              <input type="color" name="colr" id="colr" class= "form-control">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="timebed" class="col-lg-3 col-sm-6">What time do you go to bed? </label>
+            <div class="col-lg-3 col-sm-6">
+              <input type="time" name="timebed" id="timebed" class="form-control">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label class="col-lg-3 col-sm-6">What your favorite brand of car?</label>
+            <div class="col-lg-3 col-sm-6">
+                <select class="form-control costom-select" required size="3">
+                     <option value="BMV">BMV</option>
+                      <option value="Audi">Audi</option>
+                      <option value="Lada" selected>Lada</option>
+                </select>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="work" class="col-lg-3 col-sm-6">How do you rete out work? </label>
+            <div class="col-lg-3 col-sm-6">
+              <input type="range" name="work" id="work" class="form-control-range custom-range pt-2">
+            </div>
+          </div>
+        </fieldset>
+        <fieldset class="md-form">
+          <div class="col-lg-6 col-sm-6 offset-lg-2 offset-sm-3">
+            <legend class="md-3 text-primary">Your comments:</legend>
+            <textarea name="comm" placeholder="Comments" id="comm" class="md-textarea form-control" rows="3"></textarea>
+          </div>
+        </fieldset>
+        <div class="flex-column form-inline align-items-end pb-5">
+          <input class="btn btn-primary btn-block col-lg-2 col-sm-2 mb-2 p-2" type="submit" value="Submit" name="submit">
+          <button class="btn btn-danger btn-block col-lg-2 col-sm-2 p-2" type="reset" >Reset</button>
+        </div>
+      </div>
+    </form>
+  </div>
 </body>
 </html>
